# bencoder

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  ser.rs  utils.rs
tests/: test.rs
