[package]
name = "bencode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
thiserror = "1.0.58"

[dev-dependencies]
hex = "0.4.3"
